fix layout of placepage

--- a/static/css/placepage.css
+++ b/static/css/placepage.css
@@ -218,6 +218,7 @@ table {
         height: 7.4%;
         width: 100%;
         float: none;
+        margin-bottom: 0.5em;
     }
 
     .leftContent div{
